<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>
    <string name="find_my_representatives">Find my Representatives</string>
    <string name="upcoming_elections">Upcoming Elections</string>
    <string name="saved_elections">Saved Elections</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="election_information">Election Information</string>
    <string name="voting_locations">Voting Locations</string>
    <string name="ballot_information">Ballot Information</string>
    <string name="use_my_location">Use my Location</string>
    <string name="representative_search">Representative Search</string>
    <string name="my_representatives">My Representatives</string>
    <string name="zip">Zip</string>
    <string name="city">City</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="president_of_the_united_states">President of the United States</string>
    <string name="democrat_party">Democrat Party</string>
    <string name="joe_r_biden">Joe R Biden</string>

</resources>
